--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ mime = "0.3.17"
 tempfile = "3.20.0"
 lazy_static = "1.5.0"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid", "macros"] }
+humantime = {version = "2.3.0"}
