--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.11"
-actix-files = "0.6.6"
+actix-files = {version = "0.6.6", features = ["experimental-io-uring"]}
 actix-multipart = "0.7.2"
 tokio = { version = "1.47.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
