--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ futures-util = "0.3.31"
 mime = "0.3.17"
 tempfile = "3.20.0"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid", "macros"] }
+bytes = "1.10.1"
+tokio-stream = { version = "0.1.17", features = ["full"] }
