--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2024"
 
 
 [dependencies]
-actix-web = "4.11"
+actix-web = {version = "4.11", features = ["default", "rustls-0_23"]}
 actix-files = {version = "0.6.6", features = ["experimental-io-uring"]}
 actix-multipart = "0.7.2"
 actix-web-lab = {version = "0.24.3", features = ["default"]}
+actix-session = {version = "0.11.0", features = ["redis-session-rustls"]}  #"redis-session",
+actix-limitation = {version = "0.5.1", features = ["actix-session"]}
 async-stream = "0.3.6"
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-stream = { version = "0.1.17", features = ["full"] }
@@ -21,9 +23,7 @@ chrono = { version = "0.4", features = ["serde"] }
 env_logger = "0.11.8"
 log = "0.4.27"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid", "macros"] }
+rustls = {version = "0.23.35", features = ["aws-lc-rs"], default-features = false}
+rustls-pemfile = "2.2.0"
 bytes = "1.10.1"
 config = "0.15.13"
-
-
-#mime = "0.3.17"
-#tempfile = "3.20.0"
